--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,28 @@
+/* customerDisplay */
+.customerDisplay{
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  width: 100%;
+
+}
+
+
+/* cart component */
+
+.cart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
 /* productGrid component*/
 
 .productCard{
   display: flex;
   flex-direction: column;
-background-color: blue;
+background-color: white;
+color: black;
 border-radius: 3%;
 align-items: center;
 width: 80%;
@@ -32,7 +51,7 @@ margin-top: 15%;
 }
 
 /* SearchBar Component */
-.inputField{
+.inputField, .cart{
   width: 20%;
   margin: 2rem auto;
   display: flex;
