--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,6 +16,39 @@
   align-items: center;
   width: 100%;
 }
+
+
+/* cartList component */
+.cartList{
+  background-color: thistle;
+
+}
+
+/* cartItem component */
+.cartItem{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 1rem 0;
+  gap: 1rem;
+  padding: 1rem;
+  color: black;
+  background-color: white;
+  border-radius: 3%;
+}
+
+.cartItem img{
+  width: 30%;
+  margin-right: 1rem;
+}
+
+/* productNameInCart component */
+.productNameInCart{
+  font-size: 1.0rem;
+  font-weight:bold;
+  margin: 0.5rem 0;
+  width: 150%;
+}
 /* productGrid component*/
 
 .productCard{
