--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,12 +29,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 1rem 0;
   gap: 1rem;
   padding: 1rem;
   color: black;
   background-color: white;
-  border-radius: 3%;
 }
 
 .cartItem img{
@@ -48,6 +46,19 @@
   font-weight:bold;
   margin: 0.5rem 0;
   width: 150%;
+}
+
+/* totalPrice component */
+
+.totalPrice{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 1rem;
+  color: black;
+  background-color: white;
 }
 /* productGrid component*/
 
