--- a/JSfrontend/src/App.css
+++ b/JSfrontend/src/App.css
@@ -20,7 +20,7 @@
 .cart-container {
   position: fixed; /* or use "position: absolute;" depending on your layout needs */
   top: 1%; /* Adjust the top position as needed */
-  right: 1%; /* Adjust the right position as needed */
+  right: 7%; /* Adjust the right position as needed */
   width: 300px; /* Adjust the width as needed */
   z-index: 100; /* Ensure it's above other content */
 }
@@ -32,13 +32,14 @@
 
 /* cartList component */
 .cartList {
-  background-color: white; /* Apply white background only to the cartList */
+  background-color: white;
   border: 2px solid black;
   border-radius: 4px;
-  padding: 1rem;
+  padding: 0.5rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-height: 400px; /* Add a max height for scrolling if needed */
   overflow-y: auto; /* Add scrolling if the content exceeds the max height */
+  width: 115%;
 }
 
 /* cardButton container */
@@ -58,6 +59,7 @@
   padding: 0.2rem;
 }
 
+
 /* cartItem component */
 .cartItem {
   display: flex;
@@ -69,6 +71,11 @@
   background-color: white;
 }
 
+
+/* deleteButton from cartComponent */
+.deleteButton{
+  padding: 0.5rem
+}
 .cartItem img {
   width: 30%;
   margin-right: 1rem;
@@ -116,7 +123,7 @@
 .productGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
+  gap: 1rem;
   width: 90%;
   margin: 0 auto;
 
