--- a/JSfrontend/src/App.css
+++ b/JSfrontend/src/App.css
@@ -65,8 +65,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 1rem;
-  padding: 1rem;
+  gap: 0.5rem;
+  padding: 0.5rem;
   color: black;
   background-color: white;
 }
@@ -86,7 +86,7 @@
   font-size: 1rem;
   font-weight: bold;
   margin: 0.5rem 0;
-  width: 150%;
+  width: 100%;
 }
 
 /* totalPrice component */
@@ -169,7 +169,7 @@
 .calculationInCart{
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 5px
 }
 
 
