mobile cart looks good

--- a/JSfrontend/src/App.css
+++ b/JSfrontend/src/App.css
@@ -333,4 +333,9 @@ margin-top: 50px;
   .productGrid {
     grid-template-columns: repeat(1, 1fr);
   }
+
+  .cartList{
+right: 10%;
+width: 80%;
+  }
 }
