--- a/JSfrontend/src/App.css
+++ b/JSfrontend/src/App.css
@@ -99,6 +99,11 @@ margin: 2% 4%;
   background-color: #242424;
 }
 
+
+.cartButton:hover{
+  background-color: #fff;
+  color: #242424;
+}
 /* cartItem component */
 .cartItem {
   display: flex;
